--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -33,7 +33,7 @@
         android:layout_height="0dp"
         app:cardCornerRadius="4dp"
         app:cardElevation="2dp"
-        app:layout_constraintBottom_toTopOf="@id/active_game_controls"
+        app:layout_constraintBottom_toTopOf="@id/play_controls"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -54,7 +54,7 @@
         />
 
     <LinearLayout
-        android:id="@+id/active_game_controls"
+        android:id="@+id/play_controls"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:orientation="horizontal"
@@ -84,6 +84,7 @@
             android:background="?selectableItemBackground"
             />
         <android.support.v7.widget.AppCompatImageView
+            android:id="@+id/chat_button"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             app:srcCompat="@drawable/ic_chat_bubble"
