--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -62,7 +62,20 @@
         android:background="@color/white"
         android:elevation="4dp"
         >
-
+        <android.support.v7.widget.AppCompatImageView
+            android:id="@+id/discard_button"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            app:srcCompat="@drawable/ic_cancel"
+            app:tint="#000000"
+            android:layout_weight="1"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:background="?selectableItemBackground"
+            android:visibility="gone"
+            android:clickable="true"
+            android:focusable="true"
+            />
         <android.support.v7.widget.AppCompatImageView
             android:id="@+id/resign_button"
             android:layout_width="wrap_content"
@@ -77,7 +90,7 @@
             android:id="@+id/pass_button"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            app:srcCompat="@drawable/ic_undo"
+            app:srcCompat="@drawable/ic_pass"
             android:layout_weight="1"
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
@@ -119,18 +132,15 @@
             android:background="?selectableItemBackground"
             />
         <android.support.v7.widget.AppCompatImageView
-            android:id="@+id/discard_button"
+            android:id="@+id/auto_button"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            app:srcCompat="@drawable/ic_cancel"
-            app:tint="#000000"
+            app:srcCompat="@drawable/ic_magic_wand"
+            app:tint="@color/disable_black"
             android:layout_weight="1"
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
             android:background="?selectableItemBackground"
-            android:visibility="gone"
-            android:clickable="true"
-            android:focusable="true"
             />
         <android.support.v7.widget.AppCompatImageView
             android:id="@+id/confirm_button"
