--- a/app/src/main/res/layout/view_player_details.xml
+++ b/app/src/main/res/layout/view_player_details.xml
@@ -33,12 +33,16 @@
         android:id="@+id/first_row"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:gravity="right"
+        android:layout_marginRight="8dp"
         android:layout_marginLeft="8dp"
+        android:layout_marginTop="4dp"
+        android:gravity="right"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintWidth_default="wrap"
+        app:layout_constraintRight_toLeftOf="@+id/timer"
         app:layout_constraintLeft_toRightOf="@id/icon_container"
-        app:layout_constraintRight_toRightOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintWidth_default="wrap"
+        >
 
         <TextView
             android:id="@+id/name"
@@ -48,8 +52,9 @@
             android:fontFamily="@font/kanit_semibold"
             android:gravity="left"
             android:maxLines="1"
-            android:textSize="18sp"
-            tools:text="MrAlex" />
+            android:textSize="16sp"
+            tools:text="MrAlex"
+            />
 
         <TextView
             android:id="@+id/rank"
@@ -58,16 +63,33 @@
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:fontFamily="@font/kanit"
-            tools:text="(14k)"
-            android:textSize="12sp" />
+            android:textSize="12sp"
+            tools:text="(14k)" />
 
         <android.support.text.emoji.widget.EmojiAppCompatTextView
             android:id="@+id/flag"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
-            android:textSize="18sp"
-            tools:text="flg" />
+            android:textSize="14sp"
+            tools:text="flg"
+            android:layout_gravity="center_vertical"
+            />
+
+        <ImageView
+            android:id="@+id/colorIndicatorBlack"
+            android:layout_width="14dp"
+            android:layout_height="14dp"
+            android:src="@drawable/gradient_black"
+            android:layout_gravity="center_vertical"
+            />
+        <ImageView
+            android:id="@+id/colorIndicatorWhite"
+            android:layout_width="14dp"
+            android:layout_height="14dp"
+            android:src="@drawable/gradient_white"
+            android:layout_gravity="center_vertical"
+            />
 
     </LinearLayout>
 
@@ -79,6 +101,60 @@
         tools:text="3 captured + 7.5 komi"
         app:layout_constraintLeft_toLeftOf="@id/first_row"
         app:layout_constraintTop_toBottomOf="@id/first_row"
-        />
+    />
+
+    <android.support.v7.widget.CardView
+        android:id="@+id/timer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginRight="4dp"
+        app:cardBackgroundColor="@color/colorOffWhite"
+        app:cardElevation="1dp"
+        app:cardCornerRadius="4dp"
+        >
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginLeft="40dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="4sp"
+            android:layout_marginBottom="4dp"
+            android:layout_gravity="center_vertical"
+            >
+
+            <TextView
+                android:id="@+id/timerFirstLine"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:fontFamily="@font/kanit_semibold"
+                tools:text="7 : 24"
+                />
+
+            <TextView
+                android:id="@+id/timerSecondLine"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:fontFamily="@font/kanit"
+                app:layout_constraintRight_toRightOf="@id/timerFirstLine"
+                app:layout_constraintTop_toBottomOf="@id/timerFirstLine"
+                android:textSize="12sp"
+                tools:text="5 x 30s"
+                />
+        </LinearLayout>
+        <ImageView
+            android:id="@+id/clockIcon"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            app:srcCompat="@drawable/ic_clock"
+            android:layout_gravity="left|center_vertical"
+            android:layout_marginLeft="8dp"
+            />
+    </android.support.v7.widget.CardView>
 
 </android.support.constraint.ConstraintLayout>
