--- a/app/src/main/res/drawable/button_shape_default_rounded.xml
+++ b/app/src/main/res/drawable/button_shape_default_rounded.xml
@@ -1,13 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:color="@color/white"
-    tools:targetApi="lollipop">
-
-    <item android:id="@android:id/background">
-        <shape android:shape="rectangle">
-            <solid android:color="@color/white" />
-            <corners android:radius="50dp" />
-        </shape>
-    </item>
-</ripple>
+<shape android:shape="rectangle"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <solid android:color="@color/white" />
+    <corners android:radius="50dp" />
+</shape>
