--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -35,7 +35,9 @@
         app:cardElevation="2dp"
         app:layout_constraintBottom_toTopOf="@id/play_controls"
         app:layout_constraintDimensionRatio="1:1"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:cardPreventCornerOverlap="false"
+        >
 
         <io.zenandroid.onlinego.views.BoardView
             android:id="@+id/board"
