--- a/app/src/main/res/layout/item_game.xml
+++ b/app/src/main/res/layout/item_game.xml
@@ -15,6 +15,7 @@
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginTop="5dp"
+        app:cardPreventCornerOverlap="false"
         >
         <io.zenandroid.onlinego.views.BoardView
             android:id="@+id/board"
