--- a/app/src/main/res/layout/item_game_menu.xml
+++ b/app/src/main/res/layout/item_game_menu.xml
@@ -15,6 +15,7 @@
         android:layout_width="20dp"
         android:layout_height="20dp"
         tools:src="@drawable/ic_flag"
+        android:tint="@color/black"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
