--- a/app/src/main/res/layout/item_automatch.xml
+++ b/app/src/main/res/layout/item_automatch.xml
@@ -37,7 +37,7 @@
             android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:text="Bula is challenging you"
+            android:text="Looking for opponent"
             app:layout_constraintLeft_toRightOf="@id/icon"
             app:layout_constraintTop_toTopOf="@id/icon"
             android:layout_marginLeft="24dp"
@@ -56,38 +56,7 @@
             android:textSize="12sp"
             android:textColor="@color/colorTextSecondary"
             />
-        <TextView
-            android:id="@+id/declineButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="DECLINE"
-            app:layout_constraintTop_toBottomOf="@id/details"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="8dp"
-            android:layout_marginRight="16dp"
-            android:layout_marginTop="16dp"
-            android:textSize="14sp"
-            android:textStyle="bold"
-            android:textColor="@color/colorAccent"
-            android:clickable="true"
-            android:background="?android:selectableItemBackground"
-            />
-        <TextView
-            android:id="@+id/acceptButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="ACCEPT"
-            app:layout_constraintTop_toTopOf="@id/declineButton"
-            app:layout_constraintRight_toLeftOf="@id/declineButton"
-            app:layout_constraintBottom_toBottomOf="@id/declineButton"
-            android:layout_marginRight="24dp"
-            android:textSize="14sp"
-            android:textStyle="bold"
-            android:textColor="@color/colorAccent"
-            android:clickable="true"
-            android:background="?android:selectableItemBackground"
-            />
+
         <TextView
             android:id="@+id/cancelButton"
             android:layout_width="wrap_content"
@@ -102,7 +71,6 @@
             android:textSize="14sp"
             android:textStyle="bold"
             android:textColor="@color/colorAccent"
-            tools:visibility="gone"
             android:clickable="true"
             android:background="?android:selectableItemBackground"
             />
