--- a/app/src/main/res/layout/item_automatch.xml
+++ b/app/src/main/res/layout/item_automatch.xml
@@ -57,6 +57,18 @@
             android:textColor="@color/colorTextSecondary"
             />
 
+        <ProgressBar
+            android:id="@+id/progressBar"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_marginRight="32dp"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:indeterminateOnly="true"
+            app:layout_constraintLeft_toLeftOf="@id/title"
+            app:layout_constraintRight_toLeftOf="@id/cancelButton"
+            app:layout_constraintTop_toTopOf="@id/cancelButton"
+            app:layout_constraintBottom_toBottomOf="@id/cancelButton"
+            />
         <TextView
             android:id="@+id/cancelButton"
             android:layout_width="wrap_content"
