--- a/app/src/main/res/layout/view_new_challenge.xml
+++ b/app/src/main/res/layout/view_new_challenge.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -30,7 +31,7 @@
         />
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/longFab"
+        android:id="@+id/onlineFab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
@@ -38,170 +39,60 @@
         android:clickable="true"
         app:layout_constraintBottom_toTopOf="@+id/fab"
         app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@drawable/ic_turtle"
+        app:srcCompat="@drawable/ic_person_filled"
         app:fabSize="mini"
         app:backgroundTint="@color/colorAccent"
         android:visibility="gone"
+        tools:visibility="visible"
         />
 
     <TextView
-        android:id="@+id/longLabel"
+        android:id="@+id/onlineLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Correspondence"
-        app:layout_constraintRight_toLeftOf="@id/longFab"
-        app:layout_constraintTop_toTopOf="@id/longFab"
-        app:layout_constraintBottom_toBottomOf="@id/longFab"
+        android:text="Online (automatch)"
+        app:layout_constraintRight_toLeftOf="@id/onlineFab"
+        app:layout_constraintTop_toTopOf="@id/onlineFab"
+        app:layout_constraintBottom_toBottomOf="@id/onlineFab"
         android:alpha="0"
         android:elevation="6dp"
+        android:textSize="14sp"
         android:layout_marginRight="16dp"
-        android:fontFamily="@font/kanit_semibold"
+        android:textStyle="bold"
+        tools:alpha="1"
         />
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/normalFab"
+        android:id="@+id/botFab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:layout_marginEnd="16dp"
         android:clickable="true"
-        app:layout_constraintBottom_toTopOf="@+id/longFab"
+        app:layout_constraintBottom_toTopOf="@+id/onlineFab"
         app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@drawable/ic_clock"
+        app:srcCompat="@drawable/ic_robot"
         android:tint="@color/white"
         app:fabSize="mini"
         app:backgroundTint="@color/colorAccent"
         android:visibility="gone"
+        tools:visibility="visible"
         />
 
     <TextView
-        android:id="@+id/normalLabel"
+        android:id="@+id/botLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Normal"
-        app:layout_constraintRight_toLeftOf="@id/normalFab"
-        app:layout_constraintTop_toTopOf="@id/normalFab"
-        app:layout_constraintBottom_toBottomOf="@id/normalFab"
+        android:text="Bot"
+        app:layout_constraintRight_toLeftOf="@id/botFab"
+        app:layout_constraintTop_toTopOf="@id/botFab"
+        app:layout_constraintBottom_toBottomOf="@id/botFab"
         android:alpha="0"
+        android:textStyle="bold"
+        android:textSize="14sp"
         android:elevation="6dp"
         android:layout_marginRight="16dp"
-        android:fontFamily="@font/kanit_semibold"
+        tools:alpha="1"
         />
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/blitzFab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:layout_marginEnd="16dp"
-        android:clickable="true"
-        app:layout_constraintBottom_toTopOf="@+id/normalFab"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@drawable/ic_blitz"
-        app:fabSize="mini"
-        app:backgroundTint="@color/colorAccent"
-        android:visibility="gone"
-        />
-
-    <TextView
-        android:id="@+id/blitzLabel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Blitz"
-        app:layout_constraintRight_toLeftOf="@id/blitzFab"
-        app:layout_constraintTop_toTopOf="@id/blitzFab"
-        app:layout_constraintBottom_toBottomOf="@id/blitzFab"
-        android:alpha="0"
-        android:elevation="6dp"
-        android:layout_marginRight="16dp"
-        android:fontFamily="@font/kanit_semibold"
-        />
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/largeFab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:layout_marginEnd="16dp"
-        android:clickable="true"
-        app:layout_constraintBottom_toTopOf="@+id/fab"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@drawable/ic_l"
-        app:fabSize="mini"
-        app:backgroundTint="@color/colorAccent"
-        android:visibility="gone"
-        />
-
-    <TextView
-        android:id="@+id/largeLabel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="19x19"
-        app:layout_constraintRight_toLeftOf="@id/largeFab"
-        app:layout_constraintTop_toTopOf="@id/largeFab"
-        app:layout_constraintBottom_toBottomOf="@id/largeFab"
-        android:alpha="0"
-        android:elevation="6dp"
-        android:layout_marginRight="16dp"
-        android:fontFamily="@font/kanit_semibold"
-        />
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/mediumFab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:layout_marginEnd="16dp"
-        android:clickable="true"
-        app:layout_constraintBottom_toTopOf="@+id/largeFab"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@drawable/ic_m"
-        android:tint="@color/white"
-        app:fabSize="mini"
-        app:backgroundTint="@color/colorAccent"
-        android:visibility="gone"
-        />
-
-    <TextView
-        android:id="@+id/mediumLabel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="13x13"
-        app:layout_constraintRight_toLeftOf="@id/mediumFab"
-        app:layout_constraintTop_toTopOf="@id/mediumFab"
-        app:layout_constraintBottom_toBottomOf="@id/mediumFab"
-        android:alpha="0"
-        android:elevation="6dp"
-        android:layout_marginRight="16dp"
-        android:fontFamily="@font/kanit_semibold"
-        />
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/smallFab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:layout_marginEnd="16dp"
-        android:clickable="true"
-        app:layout_constraintBottom_toTopOf="@+id/mediumFab"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@drawable/ic_s"
-        app:fabSize="mini"
-        app:backgroundTint="@color/colorAccent"
-        android:visibility="gone"
-        />
-
-    <TextView
-        android:id="@+id/smallLabel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="9x9"
-        app:layout_constraintRight_toLeftOf="@id/smallFab"
-        app:layout_constraintTop_toTopOf="@id/smallFab"
-        app:layout_constraintBottom_toBottomOf="@id/smallFab"
-        android:alpha="0"
-        android:elevation="6dp"
-        android:layout_marginRight="16dp"
-        android:fontFamily="@font/kanit_semibold"
-        />
 </android.support.constraint.ConstraintLayout>
