--- a/app/src/main/res/layout/bottom_sheet_new_challenge.xml
+++ b/app/src/main/res/layout/bottom_sheet_new_challenge.xml
@@ -73,6 +73,12 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
                 />
+            <io.zenandroid.onlinego.newchallenge.NameValueButton
+                android:id="@+id/privateView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
+                />
         </LinearLayout>
         <Space
             android:layout_width="0dp"
