--- a/app/src/main/res/layout/item_active_game_card.xml
+++ b/app/src/main/res/layout/item_active_game_card.xml
@@ -121,6 +121,28 @@
                 tools:visibility="visible"
                 />
             <TextView
+                android:id="@+id/paused_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintLeft_toRightOf="@id/your_turn_label"
+                app:layout_constraintTop_toBottomOf="@id/opponent_name"
+                android:text="Paused"
+                android:background="@drawable/rounded_corners"
+                android:backgroundTint="@color/colorText"
+                android:textColor="@color/colorTextBackground"
+                android:textSize="10sp"
+                android:fontFamily="@font/ubuntu_bold"
+                android:paddingTop="2dp"
+                android:paddingBottom="2dp"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"
+                android:layout_marginTop="2dp"
+                android:visibility="gone"
+                tools:visibility="visible"
+                android:layout_marginLeft="8dp"
+                app:layout_goneMarginLeft="0dp"
+                />
+            <TextView
                 android:id="@+id/color"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
