--- a/app/src/main/res/layout/fragment_mygames.xml
+++ b/app/src/main/res/layout/fragment_mygames.xml
@@ -43,12 +43,18 @@
         android:visibility="gone"
         tools:visibility="visible"
         />
+    <androidx.compose.ui.platform.ComposeView
+        android:id="@+id/tutorialView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/title"
+        />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/gamesRecycler"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/title"
+        app:layout_constraintTop_toBottomOf="@id/tutorialView"
         app:layout_constraintBottom_toBottomOf="parent"
         tools:listitem="@layout/item_active_game_card"
         />
