--- a/app/src/main/res/layout/fragment_mygames.xml
+++ b/app/src/main/res/layout/fragment_mygames.xml
@@ -46,8 +46,9 @@
     <androidx.compose.ui.platform.ComposeView
         android:id="@+id/tutorialView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@id/title"
+        app:layout_constraintBottom_toBottomOf="parent"
         />
 
     <androidx.recyclerview.widget.RecyclerView
